--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ body {
 
 #navigation ul li {
     float: left;
-    font-size: 24px;
+    font-size: 150%;
     margin-right: 1px;
 }
 
@@ -61,7 +61,7 @@ body {
     z-index: 1;
     font-family: windowsnf, sans-serif;
     font-weight: 100;
-    font-size: 16px;
+    font-size: 100%;
 }
 
 #navigation ul li button.current_tab{
@@ -90,7 +90,7 @@ body {
     z-index: 1;
     font-family: windowsnf, sans-serif;
     font-weight: 100;
-    font-size: 16px;
+    font-size: large;
     text-align: center;
 }
 
@@ -174,7 +174,7 @@ body {
     color : var(--white);
     background: #000080;
     padding : 5px;
-    font-size: 16px;
+    font-size: large;
     font-family: windowsnf, sans-serif;
     margin-left: 5px;
     margin-top: 5px;
